ref: Rename Organization & PullRequest schema to new convention
